<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WhatAndroid</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="welcome">You’ve stumbled upon a door where your mind is the
		key. There are none who will lend you guidance; these trials are yours
		to conquer alone. Entering here will take more than mere logic and
		strategy, but the criteria are just as hidden as what they reveal.
		Find yourself, and you will find the very thing hidden behind this
		page. Beyond here is something like a utopia - beyond here is What.CD.
		This is a mirage.</string>
	<string name="blank"></string>
	<string name="rememberme">Remember me</string>
	<string name="close">Close</string>
	<string name="back">Back</string>
	<string name="forward">Forward</string>
	<string name="profile">My Profile</string>
	<string name="forums">Forums</string>
	<string name="menu">Menu</string>
	<string name="lounge">The Lounge</string>
	<string name="authkeystring">authkey</string>
	<string name="loggingin">Logging in...</string>
	<string name="loadthreads">Loading threads...</string>
	<string name="loadsections">Loading sections...</string>
	<string name="loadposts">Loading posts...</string>
	<string name="usessl">Use SSL</string>
	<string name="resume">Resuming Session...</string>
	<string name="remote_service_started">Connected to WhatIRC</string>
	<string name="remote_service_label"></string>
	<string name="send_message">Send</string>
	<string name="ui_preferences">UI Preferences</string>
	<string name="dave_checkbox_preference">Use Dave</string>
	<string name="dave_checkbox_preference_summary">Dave the Cat will notify you when something goes
		wrong</string>
	<string name="background_list_preference">App Background</string>
	<string name="background_list_preference_summary">Change the Application\'s background image</string>
	<string name="background_list_preference_title">App Background</string>
	<string name="refresh_preferences">Refresh Interval for something</string>
    <string name="toggle_bookmark">Toggle Bookmark</string>
    <string name="search_barcodes">Search Barcodes</string>
    <string name="remove">Remove</string>
    <string name="search_torrents">Search Torrents</string>
    <string name="search_requests">Search Requests</string>
    <string name="download">Download</string>

	<style name="ButtonText">
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:textColor">#ffffff</item>
		<item name="android:gravity">center</item>
		<item name="android:layout_margin">3dp</item>
		<item name="android:textSize">18dp</item>
		<item name="android:textStyle">bold</item>
		<item name="android:shadowColor">#000000</item>
		<item name="android:shadowDx">1</item>
		<item name="android:shadowDy">1</item>
		<item name="android:shadowRadius">2</item>
	</style>
	<style name="ButtonTextSmall">
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:textColor">#ffffff</item>
		<item name="android:gravity">center</item>
		<item name="android:layout_margin">3dp</item>
		<item name="android:textSize">15dp</item>
		<item name="android:textStyle">bold</item>
		<item name="android:shadowColor">#000000</item>
		<item name="android:shadowDx">1</item>
		<item name="android:shadowDy">1</item>
		<item name="android:shadowRadius">2</item>
	</style>
	<style name="ButtonTextTiny">
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:textColor">#ffffff</item>
		<item name="android:gravity">center</item>
		<item name="android:layout_margin">3dp</item>
		<item name="android:textSize">10dp</item>
		<item name="android:textStyle">bold</item>
		<item name="android:shadowColor">#000000</item>
		<item name="android:shadowDx">1</item>
		<item name="android:shadowDy">1</item>
		<item name="android:shadowRadius">2</item>
	</style>
</resources>
